@startuml

allowmixing

abstract class Robot358Main
abstract class AutoEngine358
abstract class AutoEngine358
abstract class RobotAction
class RobotControl
class ScoreAction
class RobotPosition
class Pathfinder
class PlayingFieldMap
class MoveAction
class IMUTurner

component "pathfinding package"
component "Autonomous Programs"
component "TeleOp Programs"

AutoEngine358 <-- Robot358Main
AutoEngine358 -left[hidden]- Robot358Main
"Autonomous Programs" <-- AutoEngine358
PlayingFieldMap *-- Pathfinder
PlayingFieldMap -down[hidden]- Pathfinder

"TeleOp Programs" <-- Robot358Main
"TeleOp Programs" -up[hidden]- Robot358Main
IMUTurner *-- RobotControl
IMUTurner -left[hidden]- RobotControl
RobotControl *-- Robot358Main
MoveAction -up[hidden]-  RobotAction
ScoreAction -right[hidden]-  MoveAction
Pathfinder -left[hidden]-  AutoEngine358
RobotAction *-- AutoEngine358
RobotAction -up[hidden]- AutoEngine358
MoveAction <-- RobotAction
ScoreAction <-- RobotAction
RobotPosition *-- AutoEngine358
RobotPosition -up[hidden]- AutoEngine358

Pathfinder *-- AutoEngine358
Pathfinder <-- "pathfinding package"



@enduml